--- a/src/Theme.css
+++ b/src/Theme.css
@@ -10,7 +10,6 @@
 /* ROOT -------------------------------------------------------*/
 
 .Bento {
-  background-color: var(--light);
   &:hover {outline: 4px solid var(--second);}
 }
 .BentoGrid {background-color: var(--dark)}
